// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopBar/> should handle input state changes correct 1`] = `
<div
  className="TopBar"
>
  <div
    className="container"
  >
    <div
      className="title"
    />
    <div
      className="controls-container"
    >
      <form
        className="search-container"
        onSubmit={[Function]}
      >
        <input
          name="current"
          onChange={[Function]}
          type="text"
          value="current"
        />
      </form>
      <div
        className="select-container"
      >
        <select
          name="postsLimit"
          onChange={[Function]}
          value={25}
        >
          <option
            key="25"
            value={25}
          >
            25
          </option>
          <option
            key="50"
            value={50}
          >
            50
          </option>
          <option
            key="75"
            value={75}
          >
            75
          </option>
          <option
            key="100"
            value={100}
          >
            100
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar/> should handle input state changes correct 2`] = `
<div
  className="TopBar"
>
  <div
    className="container"
  >
    <div
      className="title"
    />
    <div
      className="controls-container"
    >
      <form
        className="search-container"
        onSubmit={[Function]}
      >
        <input
          name="current"
          onChange={[Function]}
          type="text"
          value=""
        />
      </form>
      <div
        className="select-container"
      >
        <select
          name="postsLimit"
          onChange={[Function]}
          value={25}
        >
          <option
            key="25"
            value={25}
          >
            25
          </option>
          <option
            key="50"
            value={50}
          >
            50
          </option>
          <option
            key="75"
            value={75}
          >
            75
          </option>
          <option
            key="100"
            value={100}
          >
            100
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar/> should handle post limit selector change correctly 1`] = `
<div
  className="TopBar"
>
  <div
    className="container"
  >
    <div
      className="title"
    />
    <div
      className="controls-container"
    >
      <form
        className="search-container"
        onSubmit={[Function]}
      >
        <input
          name="current"
          onChange={[Function]}
          type="text"
        />
      </form>
      <div
        className="select-container"
      >
        <select
          name="postsLimit"
          onChange={[Function]}
          value={25}
        >
          <option
            key="25"
            value={25}
          >
            25
          </option>
          <option
            key="50"
            value={50}
          >
            50
          </option>
          <option
            key="75"
            value={75}
          >
            75
          </option>
          <option
            key="100"
            value={100}
          >
            100
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar/> should render without crashing 1`] = `
<div
  className="TopBar"
>
  <div
    className="container"
  >
    <div
      className="title"
    />
    <div
      className="controls-container"
    >
      <form
        className="search-container"
        onSubmit={[Function]}
      >
        <input
          name="current"
          onChange={[Function]}
          type="text"
        />
      </form>
      <div
        className="select-container"
      >
        <select
          name="postsLimit"
          onChange={[Function]}
          value={25}
        >
          <option
            key="25"
            value={25}
          >
            25
          </option>
          <option
            key="50"
            value={50}
          >
            50
          </option>
          <option
            key="75"
            value={75}
          >
            75
          </option>
          <option
            key="100"
            value={100}
          >
            100
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar/> should show postsLimit prop in select value correctly 1`] = `
<div
  className="TopBar"
>
  <div
    className="container"
  >
    <div
      className="title"
    />
    <div
      className="controls-container"
    >
      <form
        className="search-container"
        onSubmit={[Function]}
      >
        <input
          name="current"
          onChange={[Function]}
          type="text"
        />
      </form>
      <div
        className="select-container"
      >
        <select
          name="postsLimit"
          onChange={[Function]}
          value={50}
        >
          <option
            key="25"
            value={25}
          >
            25
          </option>
          <option
            key="50"
            value={50}
          >
            50
          </option>
          <option
            key="75"
            value={75}
          >
            75
          </option>
          <option
            key="100"
            value={100}
          >
            100
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;
